...
                android:layout_marginStart="108dp"
                android:layout_marginTop="28dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:onClick="onClickFrag"
...
